# Morph

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  INSTALL.md  README.md  VALIDATION.md  enkai.toml  install.ps1  install.sh  json.enk
.github/: release.yml
bench/: README.md  run_suite.py
configs/: ce_sanity_300.enk  enkai_50m.enk
docs/: 00_getting_started.md  01_syntax.md  02_types.md  03_functions.md  04_scopes.md  05_globals.md  06_logic_ops.md  07_bytecode_vm.md  08_errors.md  09_modules.md  10_visibility.md  11_formatter.md  12_testing.md  13_ffi.md  14_native_modules.md  15_concurrency.md  16_channels.md  17_tcp_networking.md  18_http_server.md  19_http_client.md  20_json.md  21_training_overview.md  22_tokenizer.md  23_dataset_streaming.md  24_checkpoints.md  25_train_eval_cli.md  26_serve_cli.md  27_frontend_stack.md  28_selfhost_workflow.md  29_compatibility_policy.md  30_v1_release_audit.md  31_v2_rc_notes.md  32_v2_migration_guide.md  33_benchmark_suite.md  34_model_lifecycle.md  35_data_algo_stack.md  36_capability_complete_report.md  37_readiness_matrix.md  39_adam0_reference_stack.md  40_registry_convergence.md  (+35 more)
enkai/: Cargo.toml  build.rs
enkai/contracts/: backend_api_v1.snapshot.json  conversation_state_v1.schema.json  db_engines_v1.snapshot.json  deploy_env_backend_v1.snapshot.json  deploy_env_llm_v1.snapshot.json  enkai_chat_v1.proto  full_platform_release_blockers_v2_5_0.json  grpc_api_v1.snapshot.json  install_bundle_v3_2_1.json  install_bundle_v3_3_0.json  install_flow_v3_2_1.json  install_flow_v3_2_1_linux.json  install_flow_v3_2_1_windows.json  install_flow_v3_3_0.json  install_flow_v3_3_0_linux.json  install_flow_v3_3_0_windows.json  readiness_full_platform_v2_5_0.json  readiness_production_v2_3_0.json  readiness_strict_selfhost_v3_1_0.json  sdk_api_v1.snapshot.json  selfhost_audited_surface_v3_1_1.json  selfhost_bootstrap_v3_1_1.json  selfhost_compiler_frontend_v3_3_0.json  selfhost_data_registry_protocols_v3_3_0.json  selfhost_deploy_and_cluster_surface_v3_3_0.json  selfhost_examples_v3_1_1.json  selfhost_frontier_v3_1_1.json  selfhost_model_and_registry_surface_v3_3_0.json  selfhost_model_registry_ops_v3_3_0.json  selfhost_native_std_accel_v3_3_0.json  selfhost_native_std_and_accel_surface_v3_3_0.json  selfhost_negative_v3_1_1.json  selfhost_project_entrypoints_v3_3_0.json  selfhost_readiness_validation_v3_3_0.json  selfhost_release_evidence_collection_v3_3_0.json  selfhost_runtime_core_v3_3_0.json  selfhost_runtime_error_taxonomy_v3_2_0.json  selfhost_serve_and_transports_v3_3_0.json  selfhost_systems_and_cli_v3_3_0.json  selfhost_systems_controlplane_v3_3_0.json  (+71 more)
enkai/src/: bench.rs  bootstrap.rs  cluster.rs  cluster_runtime.rs  cluster_sim_runtime.rs  deploy.rs  deploy_runtime.rs  frontend.rs  grpc.rs  grpc_runtime.rs  install_diag.rs  main.rs  migrate.rs  model.rs  model_runtime.rs  program_runtime.rs  project_entrypoints.rs  queue_backend.rs  queue_runtime.rs  readiness.rs  runtime_exec.rs  service_runtime.rs  sim.rs  systems.rs  train.rs  train_runtime.rs  validate.rs  worker.rs  worker_handler_runtime.rs
enkai/tests/fixtures/runtime_errors/: division_by_zero.enk  invalid_task_join.enk  list_index_out_of_range.enk  modulo_by_zero.enk
enkai/tools/bootstrap/: dataset_lite.enk  enkai_lite.enk  enkai_runtime_core.enk  fmt_lite.enk  lint_lite.enk  tokenizer_lite.enk
enkai/tools/bootstrap/full_frontier_corpus/: agent_decl_gap.enk  model_decl_gap.enk  native_import_gap.enk  prompt_decl_gap.enk  supported_core.enk  tool_decl_gap.enk
enkai/tools/bootstrap/negative_corpus/: assignment_field_mismatch.enk  binary_type_mismatch.enk  if_condition_mismatch.enk  let_annotation_mismatch.enk  return_type_mismatch.enk  unknown_field_inferred_target.enk
enkai/tools/bootstrap/selfhost_corpus/: arith.enk  lambda.enk  types_impl.enk
enkai_native/: Cargo.toml
enkai_native/src/: lib.rs
enkai_tensor/: Cargo.toml  build.rs
enkai_tensor/cuda/: enkai_kernels.cu
enkai_tensor/metal/: enkai_kernels.metal
enkai_tensor/rocm/: enkai_kernels.hip.cpp
enkai_tensor/src/: accelerator_kernels.rs  backend.rs  cuda_kernels.rs  dist.rs  lib.rs  native_runtime.rs
enkai_tensor/tests/: amp_handles.rs  backend_api.rs  backend_cpu_ops.rs  backend_rank_device.rs  basic.rs  checkpoint_ranked.rs  cuda_kernel_manifest.rs  cuda_llm_foundation.rs  dist_guards.rs  handle_hardening.rs  leak_check.rs  multi_gpu_harness.rs  native_cuda_runtime.rs  native_training_runtime.rs  retain_counts.rs  tinylm_smoke.rs
enkaic/: Cargo.toml
enkaic/src/: arena.rs  ast.rs  bytecode.rs  compiler.rs  diagnostic.rs  formatter.rs  lexer.rs  lib.rs  loader.rs  parser.rs  symbols.rs  typecheck.rs  types.rs
enkaic/src/modules/: mod.rs
enkaic/tests/: formatter.rs  modules.rs  modules_import.rs  parser.rs  typecheck.rs
enkairt/: Cargo.toml
enkairt/src/: backend.rs  checkpoint.rs  dataset.rs  engine.rs  error.rs  lib.rs  logging.rs  object.rs  runtime.rs  tokenizer.rs  value.rs  vm.rs
enkairt/src/ffi/: loader.rs  mod.rs  native_fn.rs
enkairt/tests/: ai_decls.rs  channels.rs  checkpoint.rs  dataset.rs  ffi.rs  ffi_modules.rs  http.rs  interpreter.rs  json.rs  modules.rs  net.rs  policy.rs  tasks.rs  tokenizer.rs
examples/: adam0_100.enk  adam0_reference.enk  analysis_pipeline.enk  hello.enk  hello.morph  nn_sanity.enk  snn_agent_kernel.enk
install/: README.txt  install.ps1  install.sh
installer/: License.rtf  enkai.iss  enkai.wxs  morph.iss  morph.wxs
learn/: 01_variables.enk  02_arithmetic.enk  (+48 more)
morph/: Cargo.toml
morph/src/: main.rs  train.rs
morph_tensor/: Cargo.toml
morph_tensor/src/: lib.rs
morph_tensor/tests/: basic.rs
morphrt/: Cargo.toml
morphrt/src/: error.rs  lib.rs  object.rs  runtime.rs  tokenizer.rs  value.rs  vm.rs
morphrt/src/ffi/: loader.rs  mod.rs  native_fn.rs
morphrt/tests/: channels.rs  checkpoint.rs  dataset.rs  ffi.rs  ffi_modules.rs  http.rs  interpreter.rs  json.rs  modules.rs  net.rs  policy.rs  tasks.rs  tokenizer.rs
(+423 files in other folders)
