[package]
name = "enkai"
version = "0.7.1"
edition = "2021"
license = "Apache-2.0"
description = "Enkai CLI (run, fmt, test)."

[[bin]]
name = "enkai"
path = "src/main.rs"

[dependencies]
enkai_compiler = { package = "enkaic", path = "../enkaic" }
enkai_runtime = { package = "enkairt", path = "../enkairt" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
