[package]
name = "enkai_native"
version = "2.6.9"
edition = "2021"

[lib]
name = "enkai_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
memmap2 = "0.9"
sha2 = "0.10"
zstd = "0.13"
serde_json = "1.0"
native-tls = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
postgres = { version = "0.19", default-features = false, features = ["with-serde_json-1"] }
csv = "1.3"









