[package]
name = "enkai_native"
version = "3.4.0"
edition = "2021"

[lib]
name = "enkai_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
memmap2 = "0.9"
sha2 = "0.10"
zstd = "0.13"
serde_json = "1.0"
libffi = "3.2"
libloading = "0.8"
native-tls = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
postgres = { version = "0.19", default-features = false, features = ["with-serde_json-1"] }
csv = "1.3"
mysql = "25.0"
base64 = "0.22"











