[package]
name = "enkai_tensor"
version = "1.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Enkai GPU tensor backend (libtorch)."

[lib]
name = "enkai_tensor"
crate-type = ["cdylib", "rlib"]

[features]
default = []
torch = ["tch"]
dist = []

[dependencies]
libc = "0.2"
once_cell = "1.19"
serde_json = "1.0"
tch = { version = "0.15", optional = true }
sha2 = "0.10"

