[package]
name = "enkaic"
version = "1.3.0"
edition = "2021"
license = "Apache-2.0"
description = "Enkai compiler front-end: lexer, parser, AST, type-check stubs."

[dependencies]
toml = "0.8"
bumpalo = "3.14"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"

