[package]
name = "enkairt"
version = "0.7.1"
edition = "2021"
license = "Apache-2.0"
description = "Enkai runtime/interpreter."

[dependencies]
enkaic = { path = "../enkaic" }
libloading = "0.8"
libffi = "3.2"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
