[package]
name = "enkairt"
version = "2.6.3"
edition = "2021"
license = "Apache-2.0"
description = "Enkai runtime/interpreter."

[dependencies]
enkaic = { path = "../enkaic" }
libloading = "0.8"
libffi = "3.2"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
native-tls = "0.2"
bincode = "1.3"
sha1 = "0.10"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.10"






