[package]
name = "morph"
version = "0.7.1"
edition = "2021"
license = "Apache-2.0"
description = "Morph CLI (run, fmt, test)."

[dependencies]
morphc = { path = "../morphc" }
morphrt = { path = "../morphrt" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
