[package]
name = "morph_tensor"
version = "0.7.1"
edition = "2021"
license = "Apache-2.0"
description = "Morph GPU tensor backend (libtorch)."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
torch = ["tch"]

[dependencies]
libc = "0.2"
once_cell = "1.19"
serde_json = "1.0"
tch = { version = "0.15", optional = true }
